x overflow bug

--- a/style.css
+++ b/style.css
@@ -78,6 +78,7 @@ body {
 
 .main-navbar {
     color: var(--main-font-color);
+    box-sizing: content-box;
     border-bottom: solid 2px var(--main-font-color);
     display: flex;
     flex-direction: row;
@@ -85,7 +86,7 @@ body {
     align-items: center;
     height: 100px;
 }
-.nav-heading {
+.main-navbar__heading {
     color: var(--main-font-color);
     color: var(--main-font-color);
     display: block;
@@ -94,6 +95,16 @@ body {
     margin: 0;
     text-decoration: none;
     width: 7ch;
+}
+.main-navbar__link-wrapper {
+    margin-left: auto;
+}
+.main-navbar__link {
+    font-family: var(--ff-text);
+    color: var(--main-font-color);
+    text-decoration: none;
+    font-size: var(--fs-400);
+    padding: 10px;
 }
 
 
@@ -165,8 +176,8 @@ h3 {
 .theme-toggle {
     display: block;
     height: 26px;
-    margin: clamp(10px, 2vw, 50px) 0 0 auto;
     width: 62px;
+    margin-left: 20px;
 }
 /* The toggle's background */
 .theme-toggle__slider {
